--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,9 @@ body {
   .col-center {
     @apply flex flex-col justify-center items-center;
   }
+  .abs-center {
+    @apply absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2;
+  }
 }
 
 @layer components {
@@ -180,6 +183,42 @@ body {
       }
     }
   }
+
+  .post-card {
+    @apply relative flex justify-center items-center pb-80 shadow-2xl;
+
+    .animated-gradient-bg {
+      @apply absolute w-full md:h-[200vh] h-[220vh] left-0 xl:-bottom-1/2 md:-bottom-5/6;
+    }
+
+    .post-card-wrapper {
+      @apply xl:mx-56 md:mx-12 mx-5 xl:h-[85vh] md:h-[40vh] h-[30vh] w-full flex justify-center items-center overflow-hidden relative;
+
+      video {
+        @apply w-full h-full 2xl:scale-x-105 object-cover;
+      }
+
+      img {
+        @apply absolute z-10 w-full h-full;
+      }
+
+      button {
+        @apply rounded-full bg-white absolute left-1/2 -translate-x-1/2 md:bottom-16 -bottom-28 md:w-fit w-2/3 px-5 md:px-7 py-4 text-lg;
+      }
+    }
+  }
+
+  final {
+    @apply relative h-dvh overflow-hidden;
+
+    .final-content {
+      @apply scale-110;
+    }
+  }
+
+  .final-message {
+    @apply absolute w-full h-dvh overflow-hidden z-50 opacity-100;
+  }
 }
 
 .entrance-message {
@@ -196,5 +235,9 @@ body {
 }
 
 .jason-content {
+  background: radial-gradient(ellipse, #111117 20%, transparent 70%);
+}
+
+.lucia-life-content {
   background: radial-gradient(ellipse, #111117 20%, transparent 70%);
 }
